<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenCachingFun</string>
    <string name="not_implemented">Zostatnie dodane wkrótce ;)</string>
    <!-- menu entries -->
    <string name="menu_delete">Usuń wszystkie</string>
    <string name="menu_delete_one">Usuń</string>
    <string name="menu_search">Szukaj</string>
    <string name="menu_refresh">Odśwież</string>
    <string name="menu_add">Dodaj</string>
    <string name="menu_photo">Zdjęcia</string>
    <string name="menu_logs">Logi</string>
    <string name="menu_map">Pokaż na mapie</string>
    <string name="menu_compass">Prowadź do</string>
    <string name="menu_web">Otwórz w oc.pl</string>
    <string name="menu_copy">Skopiuj...</string>
    <string name="menu_copy_code">Kod</string>
    <string name="menu_copy_name">Nazwę</string>
    <string name="menu_copy_coords">Współrzędne</string>
    <string name="menu_copy_description">Opis</string>
    <string name="menu_copy_hint">Podpowiedź</string>
    <string name="menu_sync">Synchronizuj</string>
    <!-- cache - list and single -->
    <string name="list_empty">Na razie pusto</string>
    <string name="last_found">Ostatnio znaleziona:</string>
    <string name="found">Zdobyta:</string>
    <string name="found_y">TAK</string>
    <string name="found_N">Zdobyta:</string>

    <string name="coords">Współrzędne:</string>
    <string name="distance">Dystans:</string>
    <string name="bearing">Kierunek:</string>

    <string name="gps_wait">Ustalanie pozycji...</string>
    <string name="hint">Podpowiedź:</string>
    <string name="photos">Zdjęcia</string>
    <string name="logs">Logi</string>
    <string name="size_vbig">Bardzo duża</string>
    <string name="size_big">Duża</string>
    <string name="size_med">Normalna</string>
    <string name="size_small">Mała</string>
    <string name="size_vsmall">Mikro</string>
    <string name="size_none">Bez pojemnika</string>

    <!-- add -->
    <string name="name">Nazwa</string>
    <string name="description">Opis</string>
    <string name="use_mine">Użyj moich</string>
    <string name="codes">Kody</string>
    <string name="km_from">km od</string>
    <string name="from_address">Adresu</string>
    <string name="from_cache">Skrzynki</string>
    <string name="from_coords">Współrzędnych</string>
    <string name="from_me">Moich współrzędnych</string>
    <string name="hint_codes">Kody oddzielone przecinkami</string>
    <string name="hint_name">nazwa, * zastępuje znaki</string>
    <string name="hint_address">miasto, ulica nr</string>
    <string name="hint_cache">kod pojedynczej skrzynki</string>
    <string name="hint_coords">np 50.0, 39.0</string>
    <string name="description_hint">(opcjonalny)</string>
    <string name="watched_disclaimer">Możesz przygotować listę interesujących Cię skrzynek na komputerze (dodając je do
        obserwowanych), a potem łatwo ściągnąć je wszystkie tutaj.
    </string>
    <!-- add tabs names -->
    <string name="code_or_name">Kod/Nazwa</string>
    <string name="near">W pobliżu</string>
    <string name="custom">Własne</string>
    <string name="watched">Obserwowane</string>
    <!-- add log entry -->
    <string name="log_comment">Treść wpisu</string>
    <string name="log_pass">Hasło</string>
    <string name="log_more">Więcej opcji</string>
    <string name="log_rate">Oceniam</string>
    <string name="log_recommend">Rekomenduję</string>
    <string name="log_maintenance">Potrzebuje serwisu</string>
    <string name="note_disclamer">Ta wiadomość nie będzie synchronizowana z serwerem, nie będzie też widoczna w
        ostatnich logach skrzynki. Możesz ją zobaczyć na liście włanych wpisów. Nadaje się np do zapisywania kodów z
        projektów albo informacji o GeoKretach.
    </string>
    <!-- activities titles -->
    <string name="add">Dodaj skrzynki</string>
    <string name="list">Zapisane skrzynki</string>
    <string name="cache">Skrzynka</string>
    <string name="images">Zdjęcia</string>
    <string name="log_book">Logbook</string>
    <string name="settings">Ustawienia</string>
    <string name="log_add">Dodaj wpis</string>
    <string name="my_logs">Moje logi</string>
    <!-- dialogs -->
    <string name="dialog_fill_fields">Uzupełnij wszystkie pola</string>
    <string name="dialog_no_internet">Brak dostępu do internetu</string>
    <string name="dialog_wait_for_location">Poczekaj na ustalenie pozycji</string>
    <string name="dialog_authenticate">Musisz najpierw zezwolić aplikacji na dostęp do swojego konta. Sprawdź
        ustawienia.
    </string>
    <string name="dialog_ok">Zrozumiałem</string>
    <!-- settings -->
    <string name="auth_do">Autoryzuj aplikację</string>
    <string name="auth_do_summary">by móc korzystać z bardziej zaawansowanych opcji</string>
    <string name="auth_undo">Anuluj autoryzację</string>
    <string name="auth_undo_summary">aplikacja ma autoryzację- możesz ją anulować</string>
    <string name="dummy_name">NAZWA</string>
    <string name="dummy_owner">OWNER</string>
    <string name="dummy_code">CODEXX</string>
    <string name="difficulty">Trudność:</string>
    <string name="dummy_diff1">3.5</string>
    <string name="slash">/</string>
    <string name="dummy_diff2">4.5</string>
    <string name="size">Rozmiar:</string>
    <string name="dummy_date">23.05.2009</string>
    <string name="dummy_coords">50.25 20.50</string>
    <string name="dummy_atributes">atrybuty</string>
    <string name="notes">Własna notatka:</string>
    <string name="dummy_lorem">lorem ipsum dolor sit amet</string>
    <string name="dummy_hint">HINT text coded in rot13</string>
    <string name="dummy_workaround">workaround</string>
    <string name="dummy_distance">32,5km, NNW</string>
    <string name="stop">Tak, przerwij</string>
    <string name="wanna_stop">Czy na pewno chcesz przerwać pobieranie skrzynek?</string>
    <string name="dummy_username">USER_NAME</string>
    <string name="dummy_downloading">Downloading</string>
    <string name="dummy_xy">x/y</string>

    <string name="help_title">Pomoc</string>
</resources>
