<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/add_custom"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_below="@+id/textView1">

        <requestFocus/>
    </EditText>

    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/switch1"
            android:layout_alignParentLeft="true"
            android:text="@string/coords"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    <CheckBox
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editText1"
            android:onClick="onClick"
            android:text="@string/use_mine"/>

    <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:hint="@string/hint_coords"
            android:layout_below="@+id/switch1"
            android:inputType="numberDecimal"
            android:digits="0123456789,. ">
    </EditText>

    <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editText2"
            android:text="@string/description"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
            android:id="@+id/editText3"
            android:hint="@string/description_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView3"
            android:inputType="textMultiLine"/>

</RelativeLayout>