<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:padding="2dip">

    <TextView
            android:id="@+id/list_logs_cache_name"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="fill_parent"
            android:text="@string/dummy_name"
            android:gravity="fill_horizontal" android:layout_below="@+id/list_logs_type"
            android:layout_alignParentRight="true" android:layout_alignParentLeft="true"/>

    <ImageView
            android:layout_height="wrap_content"
            android:src="@drawable/found"
            android:id="@+id/list_logs_type"
            android:layout_margin="2dip"
            android:layout_width="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"></ImageView>

    <ImageView android:layout_height="wrap_content" android:src="@drawable/recommend"
               android:id="@+id/list_logs_recommend"
               android:layout_margin="2dip" android:layout_width="wrap_content" android:layout_alignParentTop="true"
               android:layout_toRightOf="@id/list_logs_type"/>
    <ImageView android:layout_height="wrap_content" android:src="@drawable/maintenance"
               android:id="@+id/list_logs_maintenance" android:layout_margin="2dip" android:layout_width="wrap_content"
               android:layout_alignParentTop="true" android:layout_toRightOf="@+id/list_logs_recommend"
            />
    <ImageView android:layout_height="wrap_content" android:src="@drawable/star"
               android:id="@+id/list_logs_rating1" android:layout_width="wrap_content"
               android:layout_alignParentTop="true" android:layout_toRightOf="@+id/list_logs_maintenance"/>
    <ImageView android:layout_height="wrap_content" android:src="@drawable/star" android:id="@+id/list_logs_rating2"
               android:layout_width="wrap_content" android:layout_alignParentTop="true"
               android:layout_toRightOf="@+id/list_logs_rating1"/>
    <ImageView android:layout_height="wrap_content" android:src="@drawable/star" android:id="@+id/list_logs_rating3"
               android:layout_width="wrap_content" android:layout_alignParentTop="true"
               android:layout_toRightOf="@+id/list_logs_rating2"/>
    <ImageView android:layout_height="wrap_content" android:src="@drawable/star" android:id="@+id/list_logs_rating4"
               android:layout_width="wrap_content" android:layout_alignParentTop="true"
               android:layout_toRightOf="@+id/list_logs_rating3"/>
    <ImageView android:layout_height="wrap_content" android:src="@drawable/star" android:id="@+id/list_logs_rating5"
               android:layout_width="wrap_content" android:layout_alignParentTop="true"
               android:layout_toRightOf="@+id/list_logs_rating4"/>
    <TextView
            android:layout_height="wrap_content"
            android:id="@+id/list_logs_date"
            android:layout_width="wrap_content"
            android:text="@string/dummy_date"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"></TextView>

    <TextView
            android:layout_height="wrap_content"
            android:id="@+id/list_logs_body"
            android:layout_width="wrap_content"
            android:text="@string/dummy_lorem"
            android:layout_below="@+id/list_logs_cache_name" android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"></TextView>
    <TextView android:layout_height="wrap_content" android:id="@+id/list_logs_pass" android:layout_width="wrap_content"
              android:text="@string/log_pass" android:layout_below="@+id/list_logs_body"
              android:layout_alignParentLeft="true" android:textColor="#0066aa"/>
    <TextView android:layout_height="wrap_content" android:id="@+id/list_logs_error" android:layout_width="wrap_content"
              android:text="@string/dummy_lorem" android:layout_below="@+id/list_logs_pass"
              android:layout_alignParentLeft="true" android:textColor="#ff0000" android:layout_alignParentRight="true"/>

</RelativeLayout>
